fixed container overflow styling

--- a/src/App.css
+++ b/src/App.css
@@ -33,12 +33,13 @@ input[type="number"] {
 .main-parent-container {
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
 }
 
 .main-container {
   width: 40vw;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--main-background-color);
 }
 
@@ -55,6 +56,14 @@ input[type="number"] {
   padding: 10px 0px 10px 0px;
   color: var(--main-dark-font);
   width: 85%;
+}
+
+.main-parent-hive {
+  height: 100vh;
+}
+
+.main-hive {
+  height: 100%;
 }
 
 .light::after {
@@ -76,7 +85,7 @@ input[type="number"] {
 }
 
 .main-title::after {
-  content: "Bee Swarm Sim Calculator";
+  content: "Bee Swarm Sim Tools";
 }
 
 .main-subtitle {
@@ -90,7 +99,7 @@ input[type="number"] {
 .main-items-container {
   display: flex;
   flex-direction: column;
-  background-color: var(--main-darker-background-color);
+  padding: 10px 0px;
   margin: 5px 0px 5px 0px;
 }
 
@@ -382,7 +391,6 @@ input[type="number"] {
   justify-content: center;
   width: 100%;
   height: 100vh;
-  background-color: rgb(45, 162, 162);
 }
 
 .planner-container {
@@ -607,7 +615,7 @@ input[type="number"] {
 
 @media (max-width: 44rem) {
   .main-title::after {
-    content: "BSS Calculator";
+    content: "BSS Tools";
     margin-left: 12%;
   }
   .main-container {
@@ -659,9 +667,6 @@ input[type="number"] {
 }
 
 @media (max-height: 50rem) {
-  .main-container {
-    height: 100%;
-  }
   .planner {
     height: 100%;
   }
